--- a/ModbusSimJs.csproj
+++ b/ModbusSimJs.csproj
@@ -65,6 +65,12 @@
     <Reference Include="NModbus, Version=3.0.62.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\NModbus.3.0.62\lib\net46\NModbus.dll</HintPath>
     </Reference>
+    <Reference Include="NModbus.SerialPortStream, Version=3.0.62.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\NModbus.SerialPortStream.3.0.62\lib\net46\NModbus.SerialPortStream.dll</HintPath>
+    </Reference>
+    <Reference Include="RJCP.SerialPortStream, Version=2.2.2.0, Culture=neutral, PublicKeyToken=5f5e7b70c6a74deb, processorArchitecture=MSIL">
+      <HintPath>packages\SerialPortStream.2.2.2\lib\net45\RJCP.SerialPortStream.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
