--- a/app.config
+++ b/app.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="ModbusSimJs.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -16,6 +16,32 @@
             <setting name="LoopPeriodMs" serializeAs="String">
                 <value>200</value>
             </setting>
+            <setting name="Parity" serializeAs="String">
+                <value>None</value>
+            </setting>
+            <setting name="PortName" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="StopBits" serializeAs="String">
+                <value>One</value>
+            </setting>
+            <setting name="DataBits" serializeAs="String">
+                <value>8</value>
+            </setting>
+            <setting name="BaudRate" serializeAs="String">
+                <value>19200</value>
+            </setting>
+            <setting name="Port" serializeAs="String">
+                <value>502</value>
+            </setting>
         </ModbusSimJs.Properties.Settings>
     </userSettings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="RJCP.SerialPortStream" publicKeyToken="5f5e7b70c6a74deb" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.2.0" newVersion="2.2.2.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
