--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,6 @@
   <package id="JavaScriptEngineSwitcher.V8" version="3.5.5" targetFramework="net472" />
   <package id="Microsoft.ClearScript" version="6.0.2" targetFramework="net472" />
   <package id="NModbus" version="3.0.62" targetFramework="net472" />
+  <package id="NModbus.SerialPortStream" version="3.0.62" targetFramework="net472" />
+  <package id="SerialPortStream" version="2.2.2" targetFramework="net472" />
 </packages>
